--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -181,66 +181,103 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
     \begin{figure*}[h]
         \centering
         \input{figures/Exp1_write_single}
-        \caption{Experiment1: Write times for 5M Tweet Objects (Single)}
+        \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
 \end{figure*}
 
-% \tikzsetnextfilename{Exp1_write_parallel}
+\tikzsetnextfilename{Exp1_write_parallel}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp1_write_parallel}
+        \caption{Experiment1: Write times for 10M Tweet Objects (parallel)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_seq_read_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_single}
+        \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Single)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_rand_read_single}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_single}
+        \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_seq_read_parallel}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_parallel}
+        \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Parallel)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_rand_read_parallel}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_parallel}
+        \caption{Experiment2: Random Read times for 10M Tweet Objects (Parallel)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_seq_read_single_tstrue}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_single_tstrue}
+        \caption{Experiment2:Taskset = True (Single)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_seq_read_single_tsfalse}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_single_tsfalse}
+        \caption{Experiment2:Taskset = False (Single)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_rand_read_single_tstrue}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_single_tstrue}
+        \caption{Experiment2:Random Taskset = True (Single)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_rand_read_single_tsfalse}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_single_tsfalse}
+        \caption{Experiment2:Random Taskset = False (Single)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_seq_read_parallel_all}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_seq_read_parallel_all}
+        \caption{Experiment2:Seq (Parallel)}
+\end{figure*}
+
+\tikzsetnextfilename{Exp2_rand_read_parallel_all}
+    \begin{figure*}[h]
+        \centering
+        \input{figures/Exp2_rand_read_parallel_all}
+        \caption{Experiment2:Random (Parallel)}
+\end{figure*}
+
+% \tikzsetnextfilename{Exp2_legend_single}
 %     \begin{figure*}[h]
 %         \centering
-%         \input{figures/Exp1_write_parallel}
-%         \caption{Experiment1: Write times for 5M Tweet Objects (parallel)}
+%         \input{figures/Exp2_legend_single}
+%         \caption{Experiment2:Single (legend)}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp2_seq_read_single}
+% \tikzsetnextfilename{Exp2_legend_parallel}
 %     \begin{figure*}[h]
 %         \centering
-%         \input{figures/Exp2_seq_read_single}
-%         \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Single)}
+%         \input{figures/Exp2_legend_parallel}
+%         \caption{Experiment2: Parallel (legend)}
 % \end{figure*}
 
-% \tikzsetnextfilename{Exp2_seq_read_parallel}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp2_seq_read_parallel}
-%         \caption{Experiment2: Sequential Read times for 5M Tweet Objects (Parallel)}
-% \end{figure*}
-
-% \tikzsetnextfilename{Exp3a_seq_read_single_tstrue}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp3a_seq_read_single_tstrue}
-%         \caption{Experiment3a: (Single)}
-% \end{figure*}
-
-% \tikzsetnextfilename{Exp3b_seq_read_single_tsfalse}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp3b_seq_read_single_tsfalse}
-%         \caption{Experiment3b: (Single)}
-% \end{figure*}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-% \tikzsetnextfilename{Exp4_seq_read_parallel}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp4_seq_read_parallel}
-%         \caption{Experiment4: (parallel)}
-% \end{figure*}
-
-
-% \tikzsetnextfilename{Exp3_legend}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp3_legend}
-%         \caption{Experiment3: (legend)}
-% \end{figure*}
-
-% \tikzsetnextfilename{Exp4_legend}
-%     \begin{figure*}[h]
-%         \centering
-%         \input{figures/Exp4_legend}
-%         \caption{Experiment4: (legend)}
-% \end{figure*}
 
 % \tikzsetnextfilename{Exp5_network}
 %     \begin{figure*}[h]
