--- a/Experiments/plot/merge_results.ipynb
+++ b/Experiments/plot/merge_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -11,9 +11,9 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pandas in /home/saeed/.local/lib/python3.10/site-packages (1.5.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: numpy>=1.21.0 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (1.23.4)\n",
       "Requirement already satisfied: pytz>=2020.1 in /usr/lib/python3/dist-packages (from pandas) (2022.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in /home/saeed/.local/lib/python3.10/site-packages (from pandas) (2.8.2)\n",
       "Requirement already satisfied: six>=1.5 in /usr/lib/python3/dist-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
     "    return result\n",
     "\n",
     "\n",
-    "def calc_read_write(header,baselines, languages, tasksets, platforms,seq_rands, nrows, df_run, df_load_to_memory, execution):\n",
+    "def calc_read_write(header,baselines, languages, tasksets, platforms,seq_rands, nrows, df_run, df_load_to_memory, execution, rate):\n",
     "   \n",
     "    df_final = pd.DataFrame(columns = header)    \n",
     "    for baseline in baselines:\n",
@@ -141,32 +141,32 @@
     "                            if len(list_total) > 0:\n",
     "                                     \n",
     "                                    time_total = calc_mean(list=list_total)    \n",
-    "                                    time_cpu_io = calc_mean(list=list_cpu_io)\n",
-    "                                    time_load = calc_mean(list=list_load)                                    \n",
-    "\n",
+    "                                    time_cpu_io = calc_mean(list=list_cpu_io)                                 \n",
+    "                                    \n",
     "                                    base = baseline.replace(\"FlatBuffersJava\", \"FlatBufJava\")                                    \n",
-    "                                    if execution == \"CPU\" :                                       \n",
+    "                                    if execution == \"CPU\" :                                                     \n",
+    "                                        time_load = calc_mean(list=list_load)                         \n",
     "                                        total = time_total - time_load \n",
     "                                        io  = time_total - time_cpu_io\n",
-    "                                        # if io <= 0.1:\n",
-    "                                        #     io=0.1\n",
+    "                                        if io <= 0.1:\n",
+    "                                            io=0.1\n",
     "\n",
-    "                                        # cpu  = time_cpu_io - time_load\n",
-    "                                        # if cpu <= 0.1:\n",
-    "                                        #     cpu=0.1\n",
+    "                                        cpu  = time_cpu_io - time_load\n",
+    "                                        if cpu <= 0.1:\n",
+    "                                            cpu=0.1\n",
     "                                     \n",
     "                                    elif execution == \"IO\":                                 \n",
     "                                        total = time_total\n",
     "                                        cpu = time_total - time_cpu_io       \n",
     "                                        io = time_cpu_io\n",
-    "                                        # if cpu< 0.1:\n",
-    "                                        #     cpu=0.1\n",
-    "                                        # if io<= 0.1:\n",
-    "                                        #     io=0.1    \n",
+    "                                        if cpu< 0.1:\n",
+    "                                            cpu=0.1\n",
+    "                                        if io<= 0.1:\n",
+    "                                            io=0.1    \n",
     "\n",
-    "                                    result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total/60:.2f}']\n",
-    "                                    result_cpu = [base,language,taskset,'CPU',platform,seq_rand,nrow,f'{cpu/60:.2f}']\n",
-    "                                    result_io = [base,language,taskset,\"IO\",platform,seq_rand,nrow,f'{io/60:.2f}']    \n",
+    "                                    result_total = [base,language,taskset,'Total',platform,seq_rand,nrow,f'{total/rate:.2f}']\n",
+    "                                    result_cpu = [base,language,taskset,'CPU',platform,seq_rand,nrow,f'{cpu/rate:.2f}']\n",
+    "                                    result_io = [base,language,taskset,\"IO\",platform,seq_rand,nrow,f'{io/rate:.2f}']    \n",
     "\n",
     "                                    df_final.loc[len(df_final)] = result_total\n",
     "                                    df_final.loc[len(df_final)] = result_cpu\n",
@@ -182,13 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_network(header,baselines, languages, df_run):\n",
-    "    #baseline,language,execution,plan,machineip,time\n",
-    "   \n",
+    "       \n",
     "    df_final = pd.DataFrame(columns = header)    \n",
     "    for baseline in baselines:\n",
     "        for language in languages:\n",
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,14 +260,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
     "def results():\n",
     "    root_path = '../results'    \n",
     "\n",
-    "    write_results = [f'{root_path}/Experiment1_Write_times.dat']\n",
+    "    write_results = [f'{root_path}/Java_Experiment1_Write_times.dat',\n",
+    "                    f'{root_path}/Experiment1_Write_times.dat']\n",
     "    read_results = [f'{root_path}/Experiment2_Read_times.dat']                    \n",
     "    load_to_memory_results = [f'{root_path}/Experiment1_LoadToMemory_times.dat']\n",
     "    network_results = [f'{root_path}/Experiment4_ExternalSort_times.dat'] \n",
@@ -288,29 +288,49 @@
     "    nrows = [10000000,8000000,6000000,4000000,2000000]\n",
     "\n",
     "    executions = [\"CPU\", \"IO\", \"Total\"]\n",
-    "    platforms  = [ \"Single\"] #\"Parallel\",\n",
+    "    platforms  = [\"Parallel\",\"Single\"] \n",
     "    seq_rands  = [\"Sequential\", \"Random\"]\n",
     "    languages  = [\"Java\", \"CPP\",\"Rust\"]\n",
     "    tasksets   = [True, False]\n",
     "\n",
     "    df_write = merge_results(write_results)    \n",
-    "    #df_read = merge_results(read_results)\n",
+    "    df_read = merge_results(read_results)\n",
     "    df_load = merge_results(load_to_memory_results)   \n",
     "    # df_network = merge_results(network_results)   \n",
     "    # df_externalsort = merge_results(externalsort_results)   \n",
     "   \n",
-    "    df_write_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
-    "                                      seq_rands= seq_rands, nrows=nrows, df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\")\n",
+    "    df_write_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "                                      seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=60)\n",
     "\n",
-    "    # df_read_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=platforms,\n",
-    "    #                                   seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\")                                  \n",
+    "    df_write_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
+    "                                      seq_rands= seq_rands, nrows=[10000000], df_run=df_write, df_load_to_memory= df_load, execution=\"CPU\", rate=1)                                  \n",
+    "\n",
+    "\n",
+    "    df_read_single_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "                                       seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)   \n",
+    "\n",
+    "    df_read_parallel_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
+    "                                       seq_rands= seq_rands, nrows=nrows, df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "\n",
+    "    df_read_single_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Single\"],\n",
+    "                                       seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60) \n",
+    "\n",
+    "    df_read_parallel_10m_final = calc_read_write(header=read_write_header, baselines=baselines, languages=languages, tasksets=tasksets, platforms=[\"Parallel\"],\n",
+    "                                       seq_rands= seq_rands, nrows=[10000000], df_run=df_read, df_load_to_memory= df_load, execution=\"IO\", rate=60)                                                                       \n",
+    "\n",
+    "                         \n",
     "\n",
     "    # df_network_final = calc_network(header=network_header, baselines=baselines, languages=languages, df_run=df_network)\n",
     "\n",
     "    # df_externalsort_final = calc_externalsort(header=externalsort_header,tasksets=tasksets, baselines=baselines, languages=languages, df_run=df_externalsort)\n",
-    "   #                         \n",
-    "    df_write_final.to_csv(\"results/Exp1_write.dat\", index=False)  \n",
-    "   # df_read_final.to_csv(\"results/Exp2_read.dat\", index=False)\n",
+    "   #      \n",
+    "               \n",
+    "    df_write_single_final.to_csv(\"results/Exp1_write_single.dat\", index=False)  \n",
+    "    df_write_parallel_final.to_csv(\"results/Exp1_write_parallel.dat\", index=False)\n",
+    "    df_read_single_final.to_csv(\"results/Exp2_read_single.dat\", index=False)\n",
+    "    df_read_parallel_final.to_csv(\"results/Exp2_read_parallel.dat\", index=False)\n",
+    "    df_read_single_10m_final.to_csv(\"results/Exp2_read_single_10m.dat\", index=False)\n",
+    "    df_read_parallel_10m_final.to_csv(\"results/Exp2_read_parallel_10m.dat\", index=False)\n",
     "   # df_network_final.to_csv(\"results/Exp5_network.dat\", index=False)      \n",
     "   # df_externalsort_final.to_csv(\"results/Exp4_externalsort.dat\", index=False)            \n",
     "  \n",
@@ -321,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
