--- a/Experiments/plot/figures/Exp2_rand_read_single_tstrue.tex
+++ b/Experiments/plot/figures/Exp2_rand_read_single_tstrue.tex
@@ -1,32 +1,32 @@
 \begin{tikzpicture}[scale=1, node distance=6.0mm]
     \newcommand{\myaddplot}[4]{
-        \addplot[color=#4,mark=#3,discard if single={#1}{#2}]
-        table[ y=time, col sep=comma, x=nrow] {results/Exp2_read.dat};
+        \addplot[color=#4,mark=#3, dotted, line cap=round,discard if single={#1}{#2},mark options={scale=1.2,solid}, ] %dotted, 
+        table[ y=time, col sep=comma, x=nrow] {results/Exp2_read_single.dat};
         \label{#1}
     };
 
     \newcommand{\addDiagramExpThree}[2]{
-        \myaddplot{HandcodedCPP}{True}{triangle}{tug};
-        \myaddplot{inPlaceCPP}{True}{*}{tug};
-        \myaddplot{FlatBufCPP}{True}{o}{tug};
-        \myaddplot{ProtoBufCPP}{True}{triangle*}{tug};
-        \myaddplot{BoostCPP}{True}{square*}{tug};
-        \myaddplot{BsonCPP}{True}{square}{tug};
+        \myaddplot{HandcodedCPP}{True}{triangle}{black};
+        \myaddplot{inPlaceCPP}{True}{*}{black};
+        \myaddplot{FlatBufCPP}{True}{o}{black};
+        \myaddplot{ProtoBufCPP}{True}{triangle*}{black};
+        \myaddplot{BoostCPP}{True}{square}{black};
+        \myaddplot{BsonCPP}{True}{square*}{black};
 
-        \myaddplot{MessagePackRust}{True}{triangle}{tugb};
-        \myaddplot{BincodeRust}{True}{*}{tugb};
-        \myaddplot{JsonRust}{True}{o}{tugb};
-        \myaddplot{FlexBufRust}{True}{triangle*}{tugb};
-        \myaddplot{BsonRust}{True}{square}{tugb};
+        \myaddplot{MessagePackRust}{True}{triangle}{blue};
+        \myaddplot{BincodeRust}{True}{*}{blue};
+        \myaddplot{JsonRust}{True}{o}{blue};
+        \myaddplot{FlexBufRust}{True}{triangle*}{blue};
+        \myaddplot{BsonRust}{True}{square}{blue};
         
-        \myaddplot{Json+GzipJava}{True}{o}{color6};
-        \myaddplot{JsonJava}{True}{diamond*}{color6};
-        \myaddplot{BsonJava}{True}{diamond}{color6};
-        \myaddplot{DefaultJava}{True}{square}{color6};
-        \myaddplot{ProtoBufJava}{True}{square*}{color6};
-        \myaddplot{ByteBufferJava}{True}{triangle*}{color6};
-        \myaddplot{FlatBufJava}{True}{*}{color6};
-        \myaddplot{KryoJava}{True}{triangle}{color6};
+        \myaddplot{Json+GzipJava}{True}{o}{purple};
+        \myaddplot{JsonJava}{True}{diamond*}{purple};
+        \myaddplot{BsonJava}{True}{diamond}{purple};
+        \myaddplot{DefaultJava}{True}{square}{purple};
+        \myaddplot{ProtoBufJava}{True}{square*}{purple};
+        \myaddplot{ByteBufferJava}{True}{triangle*}{purple};
+        \myaddplot{FlatBufJava}{True}{*}{purple};
+        \myaddplot{KryoJava}{True}{triangle}{purple};
    };
 
    
@@ -37,9 +37,9 @@
 			\edef\tempb{#1}
 			\ifx\tempa\tempb
                 \edef\tempc{\thisrow{taskset}}
-                \edef\tempd{False}
+                \edef\tempd{True}
                 \ifx\tempc\tempd
-                    %----------
+                    %
                     \edef\tempe{\thisrow{execution}}
                     \edef\tempf{Total}
                     \ifx\tempe\tempf
@@ -49,7 +49,7 @@
                         \ifx\tempg\temph
                             %
                             \edef\tempi{\thisrow{seq_rand}}
-                            \edef\tempj{Sequential}
+                            \edef\tempj{Random}
                             \ifx\tempi\tempj                                
                             \else
                             \def\pgfmathresult{inf}
@@ -76,7 +76,7 @@
     \begin{axis}
         [
         ymode=log,    
-        %ymin=0.1,
+        ymin=0,
         y tick label style={/pgf/number format/1000 sep={}},   
         scaled y ticks=false,
         scaled x ticks=false,
@@ -87,21 +87,22 @@
         xtick pos=left,
         ytick pos=left,
         ytick align=outside,
+        xtick align=outside,
         yticklabel style = {font=\Large},
         ylabel style = {font=\Large},
         xticklabel style = {font=\Large},
         xtick=data,
-        xtick={1000000,2000000,3000000,4000000,5000000},
-        xticklabels={1M,2M,3M,4M,5M},
+        xtick={2000000,4000000,6000000,8000000,10000000},
+        xticklabels={2M,4M,6M,8M,10M},
         xlabel style = {font=\Large, yshift=-7pt},
-        height=1.3\columnwidth,
+        height=1\columnwidth,
         width=0.45\textwidth,
         grid=both,
         grid style=dotted,
         minor grid style={gray!50},
-        every axis plot/.append style={line width=1pt,mark options={scale=1.7,solid}},
+        every axis plot/.append style={line width=0.7pt},
         ]
-        \addDiagramExpThree{yelp-json}{true};
+        \addDiagramExpThree{}{};
     \end{axis}
 
 \end{tikzpicture}
