--- a/Experiments/plot/Plot.tex
+++ b/Experiments/plot/Plot.tex
@@ -177,75 +177,75 @@ Computer Society, IEEE, IEEEtran, journal, \LaTeX, paper, template.
 % \end{figure*}
 
 
-\tikzsetnextfilename{Exp1_write_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp1_write_single}
-        \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp1_write_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp1_write_single}
+%         \caption{Experiment1: Write times for 10M Tweet Objects (Single)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp1_write_parallel}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp1_write_parallel}
-        \caption{Experiment1: Write times for 10M Tweet Objects (parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp1_write_parallel}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp1_write_parallel}
+%         \caption{Experiment1: Write times for 10M Tweet Objects (parallel)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_seq_read_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_single}
-        \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_single}
+%         \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Single)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_rand_read_single}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_rand_read_single}
-        \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_rand_read_single}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_rand_read_single}
+%         \caption{Experiment2: Random Read times for 10M Tweet Objects (Single)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_seq_read_parallel}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_parallel}
-        \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_parallel}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_parallel}
+%         \caption{Experiment2: Sequential Read times for 10M Tweet Objects (Parallel)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_rand_read_parallel}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_rand_read_parallel}
-        \caption{Experiment2: Random Read times for 10M Tweet Objects (Parallel)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_rand_read_parallel}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_rand_read_parallel}
+%         \caption{Experiment2: Random Read times for 10M Tweet Objects (Parallel)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_seq_read_single_tstrue}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_single_tstrue}
-        \caption{Experiment2:Taskset = True (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_single_tstrue}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_single_tstrue}
+%         \caption{Experiment2:Taskset = True (Single)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_seq_read_single_tsfalse}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_seq_read_single_tsfalse}
-        \caption{Experiment2:Taskset = False (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_seq_read_single_tsfalse}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_seq_read_single_tsfalse}
+%         \caption{Experiment2:Taskset = False (Single)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_rand_read_single_tstrue}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_rand_read_single_tstrue}
-        \caption{Experiment2:Random Taskset = True (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_rand_read_single_tstrue}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_rand_read_single_tstrue}
+%         \caption{Experiment2:Random Taskset = True (Single)}
+% \end{figure*}
 
-\tikzsetnextfilename{Exp2_rand_read_single_tsfalse}
-    \begin{figure*}[h]
-        \centering
-        \input{figures/Exp2_rand_read_single_tsfalse}
-        \caption{Experiment2:Random Taskset = False (Single)}
-\end{figure*}
+% \tikzsetnextfilename{Exp2_rand_read_single_tsfalse}
+%     \begin{figure*}[h]
+%         \centering
+%         \input{figures/Exp2_rand_read_single_tsfalse}
+%         \caption{Experiment2:Random Taskset = False (Single)}
+% \end{figure*}
 
 \tikzsetnextfilename{Exp2_seq_read_parallel_all}
     \begin{figure*}[h]
